complete testing of feature + added missing tests
